objects/MDPicklistValueDomainBase__mdt.object
<CustomObject>
    <description>The reason of introduction the second Masterdata object is saving a space in custom metadata namespace. One object that is only 90 bites bigger may be used to save information about entire code domain</description>
    <fields>
        <fullName>Code__c</fullName>
        <description>The original code from master data</description>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To indicate if the last successor is active it will be used in datafix </description>
        <label>IsLastSuccessorActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastSuccessorDomain__c</fullName>
        <description>Semicolon separated values of domains </description>
        <label>LastSuccessorDomain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastSuccessor__c</fullName>
        <description>The code of last successor that it is related to the original code.  </description>
        <label>LastSuccessor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>MDPicklistValueDomainBase</label>
    <pluralLabel>MDPicklistValueDomainBases</pluralLabel>
</CustomObject>